# F1Predict

./: .gitignore  README.md  pyproject.toml
docs/: 2026-07-07_shutdown_summary_cn.md  2026-07-07_shutdown_summary_correlated_result_saturation_cn.md  2026-07-07_shutdown_summary_red_flag_tail_cn.md  2026-07-08_project_showcase_report_cn.md  2026-07-08_shutdown_summary_cn.md  backend_api_v2_cn.md  backend_prediction_rearchitecture_plan_cn.md  codex_llm_protocol.md  codex_role_sources_and_reset_plan_cn.md  current_prediction_failure_audit_cn.md  f1_prediction_architecture_report.md  frontend_prediction_dashboard_replan_cn.md  mvp_30h_explanation_and_frontend_status.md  mvp_status.md  prediction_explainability_module_cn.md  prediction_impact_audit_cn.md  prediction_run_tracking_design_cn.md  traceable_prediction_update_architecture_cn.md  user_project_expectations_cn.md  verified_facts_2026_cn.md
reports/: evidence_coverage_20260630.json
scripts/: belief_route_scale_smoke_test.py  correlated_result_saturation_smoke_test.py  explainability_smoke_test.py  fastf1_recent_full_field_finish_smoke_test.py  fastf1_recent_team_reliability_smoke_test.py  fastf1_status_semantics_smoke_test.py  fastf1_team_setup_quality_smoke_test.py  fastf1_team_tyre_deg_smoke_test.py  formal_impact_trace_progress.py  full_impact_trace_smoke_test.py  impact_trace_sidecar_smoke_test.py  impact_trace_sidecar_write_smoke_test.py  model_error_review_belief_state_smoke_test.py  post_event_review_smoke_test.py  practice_long_run_conflict_gate_smoke_test.py  prediction_anomaly_audit_smoke_test.py  (+7 more)
(+738 files in other folders)
